# stockchartstic

./: README.md  notes.md
backend/: .gitignore  Dockerfile  config.py  db.ps1  main.py  news.py  pyproject.toml  settings.py  test.json
backend/apis/: __init__.py  bars.py  ohlcv.py  utils.py
backend/datasources/: alpaca-data.py  base.py  yahoo.py
backend/models/: database.py  models.py  user.py  utils.py
backend/requirements/: base.txt  local.txt  prod.txt
backend/services/: bars.py  logging.py  ohlcv.py  scrape.py  tasks.py  user.py  utils.py
frontend/: package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: page.tsx
